--- a/product.html
+++ b/product.html
@@ -18,8 +18,7 @@
     <!-- heading part stats here -->
     <header>
       <!-- <h1>Logo</h1> -->
-      <i class="fas fa-bars fa-2x" id="menu-icon"></i>
-      <nav id="menu" class="hidden">
+      <nav>
         <ul class="nav-upper flex-space-around">
           <li class="nav__list">
             <a href="/index.html" class="nav__link">Home</a>
@@ -62,7 +61,7 @@
     <!-- heading part ends here -->
 
     <main>
-      <h3>cart page</h3>
+      <h3>product page</h3>
     </main>
 
     <!-- footer starts here -->
@@ -83,7 +82,7 @@
       </div>
     </footer>
     <!-- footer ends here -->
-    
+
     <script src="./script/index.js"></script>
   </body>
 </html>
